--- a/templates/Park/show.html.twig
+++ b/templates/Park/show.html.twig
@@ -57,7 +57,8 @@
                                         {{ infoPark.name }}
                                     </a>
                                     -
-                                    {{ units.km_or_mil(isImperial, infoPark.distance) }}
+                                    {% set distance = units.km_or_mi(isImperial, infoPark.distance) %}
+                                    {{ distance.value ~ ' ' ~ distance.unit }}
                                 </li>
                             {% endfor %}
                         </ul>
@@ -133,7 +134,8 @@
                                     {% if coaster.height is null %}
                                         {{ ('data.unknown'|trans([], 'database')) }}
                                     {% else %}
-                                        {{ units.m_or_f(isImperial, coaster.height) }}
+                                        {% set height = units.m_or_f(isImperial, coaster.height) %}
+                                        {{ height.value ~ ' ' ~ height.unit }}
                                     {% endif %}
                                 </li>
                                 <li>
@@ -141,7 +143,8 @@
                                     {% if coaster.speed is null %}
                                         {{ ('data.unknown'|trans([], 'database')) }}
                                     {% else %}
-                                        {{ units.kph_or_mph(isImperial, coaster.speed) }}
+                                        {% set speed = units.kph_or_mph(isImperial, coaster.speed) %}
+                                        {{ speed.value ~ ' ' ~ speed.unit }}
                                     {% endif %}
                                 </li>
                                 <li>
@@ -149,7 +152,8 @@
                                     {% if coaster.length is null %}
                                         {{ ('data.unknown'|trans([], 'database')) }}
                                     {% else %}
-                                        {{ units.m_or_f(isImperial, coaster.length) }}
+                                        {% set length = units.m_or_f(isImperial, coaster.length) %}
+                                        {{ length.value ~ ' ' ~ length.unit }}
                                     {% endif %}
                                 </li>
                                 <li>
