--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -99,8 +99,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-arrow-up8 text-warning-600"></i>
                             {% if coaster.height is not empty %}
-                                {% set height = units.m_or_f(isImperial, coaster.height) %}
-                                {{ height.value ~ ' ' ~ height.unit }}
+                                {{ units.m_or_f(isImperial, coaster.height) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
@@ -108,8 +107,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-rocket text-success-400"></i>
                             {% if coaster.speed is not empty %}
-                                {% set speed = units.kph_or_mph(isImperial, coaster.speed) %}
-                                {{ speed.value ~ ' ' ~ speed.unit }}
+                                {{ units.kph_or_mph(isImperial, coaster.speed) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
@@ -119,8 +117,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-rulers text-blue"></i>
                             {% if coaster.length is not empty %}
-                                {% set length = units.m_or_f(isImperial, coaster.length) %}
-                                {{ length.value ~ ' ' ~ length.unit }}
+                                {{ units.m_or_f(isImperial, coaster.length) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
