[#108] - Add field to choose units system for connected user

--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -10,7 +10,7 @@
     {# <meta name="description" content="{{ coaster.name }} is a {{ coaster.manufacturer.name }} roller coaster"/> #}
 {# {% endblock %} #}
 
-{% set isImperial = units.isImperial(app.request.locale) %}
+{% set isImperial = units.isImperial(app.request.locale, app.user) %}
 {% block body %}
     <div class="row">
         <div class="col-sm-3">
