--- a/templates/Profile/me.html.twig
+++ b/templates/Profile/me.html.twig
@@ -105,6 +105,10 @@
               {{ form_widget(form.preferredLocale, {'attr': {'class': 'form-control'}}) }}
             </div>
             <div class="form-group">
+                {{ form_label(form.imperial) }}
+                {{ form_widget(form.imperial, {'attr': {'class': 'form-control'}}) }}
+            </div>
+              <div class="form-group">
               {{ form_label(form.homePark) }}
               {{ form_widget(form.homePark, {'attr': {'class': 'form-control'}}) }}
             </div>
