--- a/templates/Coaster/show.html.twig
+++ b/templates/Coaster/show.html.twig
@@ -98,7 +98,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-arrow-up8 text-warning-600"></i>
                             {% if coaster.height is not empty %}
-                                {{ units.m_or_f(units.isImperial(), coaster.height) }}
+                                {{ units.m_or_f(coaster.height) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
@@ -106,7 +106,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-rocket text-success-400"></i>
                             {% if coaster.speed is not empty %}
-                                {{ units.kph_or_mph(units.isImperial(), coaster.speed) }}
+                                {{ units.kph_or_mph(coaster.speed) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
@@ -116,7 +116,7 @@
                         <button type="button" class="btn btn-default btn-block btn-float btn-float-lg text-bold">
                             <i class="icon-rulers text-blue"></i>
                             {% if coaster.length is not empty %}
-                                {{ units.m_or_f(units.isImperial(), coaster.length) }}
+                                {{ units.m_or_f(coaster.length) }}
                             {% else %}
                                 &nbsp;
                             {% endif %}
