Adding check on login if account not enabled

--- a/templates/connect/login.html.twig
+++ b/templates/connect/login.html.twig
@@ -39,7 +39,7 @@
                     {% for label, messages in app.flashes %}
                         {% for message in messages %}
                             <div class="alert alert-{{ label }} alert-bordered">
-                                {{ message }}
+                                {{ message | raw }}
                             </div>
                         {% endfor %}
                     {% endfor %}
